Change UI colors

--- a/api-reference/endpoint/chat-completions.mdx
+++ b/api-reference/endpoint/chat-completions.mdx
@@ -62,7 +62,7 @@ payload = {
     "messages": [
         {
             "role": "user",
-            "content": "Tell me of the weather now!"
+            "content": "Why is the sky blue?"
         }
     ],
     "temperature": 1,
