--- a/api-reference/endpoint/chat-completions.mdx
+++ b/api-reference/endpoint/chat-completions.mdx
@@ -39,6 +39,8 @@ Choose from the following personas to customize the model's behavior:
 3. **creative_writer** - Creative and engaging content
 4. **educator** - Clear, teaching-oriented responses
 5. **safety_first** - Extra emphasis on safety and caution
+6. **insurance_underwriter** - Risk assessment and insurance analysis
+7. **financial_analyst** - Financial analysis and investment insights
 
 ## Code Examples
 
