--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -3,6 +3,16 @@ title: 'Getting Started'
 description: 'Create your account and make your first API request in minutes'
 ---
 
+<Card
+  title="Get Your API Key"
+  icon="key"
+  href="https://dashboard.ctgt.ai"
+>
+  Visit the CTGT Dashboard to get your API key and start building
+</Card>
+
+---
+
 ## Quick Start
 
 Get started with the CTGT API in 3 simple steps:
@@ -249,7 +259,7 @@ Upon signup, you immediately get access to:
   </Card>
   
   <Card title="Advanced Features" icon="wand-magic-sparkles" href="/api-reference/api-features">
-    Streaming, custom prompts, temperature control, and more
+    Streaming responses and advanced features
   </Card>
   
   <Card title="Code Examples" icon="code" href="/api-reference/code-examples">
