--- a/api-reference/models-pricing.mdx
+++ b/api-reference/models-pricing.mdx
@@ -5,7 +5,7 @@ description: 'Complete guide to available AI models and pricing structure'
 
 ## Overview
 
-CTGT API provides access to 11 state-of-the-art AI models across different tiers. All pricing is **pay-as-you-go** based on token usage.
+CTGT API provides access to 10 state-of-the-art AI models across different tiers. All pricing is **pay-as-you-go** based on token usage.
 
 <Note>
 Pricing is per **1 million tokens** (1M tokens). You only pay for what you use.
@@ -24,8 +24,8 @@ Available immediately upon signup - no credit card required:
     **Model:** `gemini-2.5-flash`
     
     **Pricing (per 1M tokens):**
-    - Input: $0.50
-    - Output: $2.70
+    - Input: $0.40
+    - Output: $2.60
   </Card>
   
   <Card title="Gemini 2.5 Flash Lite" icon="feather">
@@ -34,8 +34,8 @@ Available immediately upon signup - no credit card required:
     **Model:** `gemini-2.5-flash-lite`
     
     **Pricing (per 1M tokens):**
-    - Input: $0.30
-    - Output: $0.60
+    - Input: $0.20
+    - Output: $0.50
   </Card>
   
   <Card title="Claude Haiku 4.5" icon="rabbit-running">
@@ -44,8 +44,8 @@ Available immediately upon signup - no credit card required:
     **Model:** `claude-haiku-4-5-20251001`
     
     **Pricing (per 1M tokens):**
-    - Input: $1.20
-    - Output: $5.20
+    - Input: $1.10
+    - Output: $5.10
   </Card>
 </CardGroup>
 
@@ -64,8 +64,8 @@ Unlock all models with a paid subscription:
     **Model:** `claude-sonnet-4-5-20250929`
     
     **Pricing (per 1M tokens):**
-    - Input: $5.00
-    - Output: $17.00
+    - Input: $4.00
+    - Output: $16.00
     
     **Best for:** Complex reasoning, analysis, creative writing
   </Card>
@@ -76,8 +76,8 @@ Unlock all models with a paid subscription:
     **Model:** `claude-opus-4-5-20251101`
     
     **Pricing (per 1M tokens):**
-    - Input: $10.00
-    - Output: $30.00
+    - Input: $7.50
+    - Output: $27.50
     
     **Best for:** Research, expert-level tasks, multi-step reasoning
   </Card>
@@ -92,22 +92,10 @@ Unlock all models with a paid subscription:
     **Model:** `gpt-5`
     
     **Pricing (per 1M tokens):**
-    - Input: $3.25
-    - Output: $12.00
+    - Input: $2.25
+    - Output: $11.00
     
     **Best for:** General-purpose tasks, coding, analysis
-  </Card>
-  
-  <Card title="GPT-5.2 Pro" icon="star">
-    Professional-grade performance
-    
-    **Model:** `gpt-5.2-pro`
-    
-    **Pricing (per 1M tokens):**
-    - Input: $6.75
-    - Output: $19.00
-    
-    **Best for:** Production applications, enterprise use
   </Card>
   
   <Card title="GPT-5.2" icon="sparkles">
@@ -116,8 +104,8 @@ Unlock all models with a paid subscription:
     **Model:** `gpt-5.2`
     
     **Pricing (per 1M tokens):**
-    - Input: $6.75
-    - Output: $19.00
+    - Input: $4.25
+    - Output: $16.50
     
     **Best for:** Advanced tasks, better accuracy
   </Card>
@@ -128,8 +116,8 @@ Unlock all models with a paid subscription:
     **Model:** `gpt-5-mini`
     
     **Pricing (per 1M tokens):**
-    - Input: $3.25
-    - Output: $12.00
+    - Input: $1.25
+    - Output: $3.00
     
     **Best for:** Cost-effective GPT-5 access
   </Card>
@@ -140,8 +128,8 @@ Unlock all models with a paid subscription:
     **Model:** `gpt-5-nano`
     
     **Pricing (per 1M tokens):**
-    - Input: $0.25
-    - Output: $0.60
+    - Input: $0.15
+    - Output: $0.50
     
     **Best for:** High-volume, simple tasks
   </Card>
@@ -149,14 +137,14 @@ Unlock all models with a paid subscription:
 
 ### Advanced Gemini Models
 
-<Card title="Gemini 3 Pro" icon="gem">
-  Next-generation Gemini
+<Card title="Gemini 3 Pro Preview" icon="gem">
+  Next-generation Gemini (preview)
   
-  **Model:** `gemini-3-pro`
+  **Model:** `gemini-3-pro-preview`
   
   **Pricing (per 1M tokens):**
-  - Input: $4.00
-  - Output: $14.00
+  - Input: $4.50
+  - Output: $14.50
   
   **Best for:** Multimodal tasks, complex reasoning
 </Card>
@@ -167,17 +155,16 @@ Unlock all models with a paid subscription:
 
 | Model | Tier | Input (per 1M tokens) | Output (per 1M tokens) | Best Use Case |
 |-------|------|----------------------|------------------------|---------------|
-| `gemini-2.5-flash-lite` | Free | $0.30 | $0.60 | Simple queries, high volume |
-| `gemini-2.5-flash` | Free | $0.50 | $2.70 | General tasks, fast responses |
-| `gpt-5-nano` | Paid | $0.25 | $0.60 | Ultra-efficient processing |
-| `claude-haiku-4-5-20251001` | Free | $1.20 | $5.20 | Fast Claude responses |
-| `gpt-5` | Paid | $3.25 | $12.00 | Advanced reasoning |
-| `gpt-5-mini` | Paid | $3.25 | $12.00 | Cost-effective GPT-5 |
-| `gemini-3-pro` | Paid | $4.00 | $14.00 | Next-gen capabilities |
-| `claude-sonnet-4-5-20250929` | Paid | $5.00 | $17.00 | Balanced intelligence |
-| `gpt-5.2` | Paid | $6.75 | $19.00 | Enhanced performance |
-| `gpt-5.2-pro` | Paid | $6.75 | $19.00 | Professional applications |
-| `claude-opus-4-5-20251101` | Paid | $10.00 | $30.00 | Expert-level tasks |
+| `gpt-5-nano` | Paid | $0.15 | $0.50 | Ultra-efficient processing |
+| `gemini-2.5-flash-lite` | Free | $0.20 | $0.50 | Simple queries, high volume |
+| `gemini-2.5-flash` | Free | $0.40 | $2.60 | General tasks, fast responses |
+| `claude-haiku-4-5-20251001` | Free | $1.10 | $5.10 | Fast Claude responses |
+| `gpt-5-mini` | Paid | $1.25 | $3.00 | Cost-effective GPT-5 |
+| `gpt-5` | Paid | $2.25 | $11.00 | Advanced reasoning |
+| `claude-sonnet-4-5-20250929` | Paid | $4.00 | $16.00 | Balanced intelligence |
+| `gpt-5.2` | Paid | $4.25 | $16.50 | Enhanced performance |
+| `gemini-3-pro-preview` | Paid | $4.50 | $14.50 | Next-gen capabilities (preview) |
+| `claude-opus-4-5-20251101` | Paid | $7.50 | $27.50 | Expert-level tasks |
 
 
 ---
@@ -233,8 +220,8 @@ curl https://api.ctgt.ai/v1/subscription/info \
       "display_name": "Gemini 2.5 Flash",
       "tier": "free",
       "pricing": {
-        "input": 0.50,
-        "output": 2.70
+        "input": 0.40,
+        "output": 2.60
       }
     }
   ]
@@ -245,9 +232,9 @@ curl https://api.ctgt.ai/v1/subscription/info \
 
 ## Upgrade to Access All Models
 
-<Card title="Unlock All 11 Models" icon="unlock" href="/api-reference/subscription-billing">
+<Card title="Unlock All 10 Models" icon="unlock" href="/api-reference/subscription-billing">
   Upgrade to paid tier for:
-  - Access to all 11 models
+  - Access to all 10 models
   - 100x higher rate limits
   - Priority support
   - Production-ready infrastructure
@@ -265,7 +252,7 @@ curl https://api.ctgt.ai/v1/subscription/info \
   </Card>
   
   <Card title="API Features" icon="wand-magic-sparkles" href="/api-reference/api-features">
-    Learn about streaming, temperature, and more
+    Learn about streaming and advanced features
   </Card>
   
   <Card title="Code Examples" icon="code" href="/api-reference/code-examples">
