--- a/api-reference/subscription-billing.mdx
+++ b/api-reference/subscription-billing.mdx
@@ -127,7 +127,7 @@ console.log(data);
     "tokens_per_day": 10000000
   },
   "available_models": [
-    // All 11 models listed
+    // All 10 models listed
   ],
   "upgrade_url": null
 }
@@ -567,7 +567,7 @@ def check_budget_alert(api_key, monthly_budget=100):
     Shorter prompts = lower costs:
     - Be concise
     - Remove unnecessary context
-    - Use system prompts efficiently
+    - Keep messages focused
   </Card>
   
   <Card title="Cache Common Responses" icon="database">
@@ -587,7 +587,7 @@ def check_budget_alert(api_key, monthly_budget=100):
 | Tier | Monthly Fee | What's Included |
 |------|-------------|-----------------|
 | **Free** | $0 | 3 models, basic limits |
-| **Paid** | $10 | All 11 models, 100x limits |
+| **Paid** | $10 | All 10 models, 100x limits |
 
 ### Usage Costs (Pay-as-you-go)
 
@@ -653,11 +653,11 @@ All scenarios assume normal usage patterns. Your costs may vary based on actual 
 
 <CardGroup cols={2}>
   <Card title="View All Models" icon="layer-group" href="/api-reference/models-pricing">
-    Compare all 11 models and their pricing
+    Compare all 10 models and their pricing
   </Card>
   
   <Card title="API Features" icon="wand-magic-sparkles" href="/api-reference/api-features">
-    Learn about streaming, temperature control, and more
+    Learn about streaming and advanced features
   </Card>
   
   <Card title="Code Examples" icon="code" href="/api-reference/code-examples">
