--- a/api-reference/api-features.mdx
+++ b/api-reference/api-features.mdx
@@ -12,14 +12,6 @@ The CTGT API offers advanced features to customize and optimize your AI interact
     Real-time token-by-token output
   </Card>
   
-  <Card title="Temperature Control" icon="temperature-half">
-    Adjust creativity and randomness
-  </Card>
-  
-  <Card title="System Prompts" icon="message-code">
-    Define AI personality and behavior
-  </Card>
-  
   <Card title="Token Limits" icon="ruler">
     Control response length and costs
   </Card>
@@ -169,207 +161,6 @@ data: [DONE]
 Streaming is ideal for user-facing applications where showing incremental progress improves the experience.
 </Tip>
 
----
-
-## Temperature Control
-
-Adjust the randomness and creativity of AI responses.
-
-### Temperature Scale
-
-```
-0.0 ←─────────── 1.0 ────────────→ 2.0
-Deterministic    Balanced     Creative
-   Focused                      Random
-```
-
-### Setting Temperature
-
-<CodeGroup>
-
-```bash Low Temperature (0.0-0.3)
-curl -X POST https://api.ctgt.ai/v1/chat/completions \
-  -H "Authorization: Bearer sk-ctgt-YOUR_API_KEY" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "model": "gemini-2.5-flash",
-    "messages": [
-      {"role": "user", "content": "What is 2+2?"}
-    ],
-    "temperature": 0.0
-  }'
-```
-
-```bash Balanced Temperature (0.7-1.0)
-curl -X POST https://api.ctgt.ai/v1/chat/completions \
-  -H "Authorization: Bearer sk-ctgt-YOUR_API_KEY" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "model": "gemini-2.5-flash",
-    "messages": [
-      {"role": "user", "content": "Tell me about AI"}
-    ],
-    "temperature": 1.0
-  }'
-```
-
-```bash High Temperature (1.5-2.0)
-curl -X POST https://api.ctgt.ai/v1/chat/completions \
-  -H "Authorization: Bearer sk-ctgt-YOUR_API_KEY" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "model": "gemini-2.5-flash",
-    "messages": [
-      {"role": "user", "content": "Write a creative poem"}
-    ],
-    "temperature": 1.8
-  }'
-```
-
-</CodeGroup>
-
-### Temperature Use Cases
-
-| Temperature | Best For | Example Use Cases |
-|-------------|----------|-------------------|
-| **0.0 - 0.3** | Factual, deterministic | Math, code, data extraction, classification |
-| **0.4 - 0.7** | Balanced responses | General Q&A, summarization, translation |
-| **0.8 - 1.2** | Creative variation | Content writing, brainstorming |
-| **1.3 - 2.0** | Maximum creativity | Poetry, fiction, artistic content |
-
-<Warning>
-Higher temperatures increase randomness and may reduce accuracy. Use lower temperatures for factual tasks.
-</Warning>
-
----
-
-## System Prompts
-
-Define the AI's personality, role, and behavior using system messages.
-
-### Basic System Prompt
-
-<CodeGroup>
-
-```python Python
-import requests
-
-api_key = "sk-ctgt-YOUR_API_KEY"
-url = "https://api.ctgt.ai/v1/chat/completions"
-
-data = {
-    "model": "claude-sonnet-4-5-20250929",
-    "messages": [
-        {
-            "role": "system",
-            "content": "You are a expert financial analyst specializing in tech stocks. Provide detailed, data-driven analysis."
-        },
-        {
-            "role": "user",
-            "content": "Should I invest in AI companies?"
-        }
-    ]
-}
-
-response = requests.post(url, headers={"Authorization": f"Bearer {api_key}"}, json=data)
-print(response.json()['choices'][0]['message']['content'])
-```
-
-```javascript JavaScript
-const response = await fetch('https://api.ctgt.ai/v1/chat/completions', {
-  method: 'POST',
-  headers: {
-    'Authorization': 'Bearer sk-ctgt-YOUR_API_KEY',
-    'Content-Type': 'application/json'
-  },
-  body: JSON.stringify({
-    model: 'claude-sonnet-4-5-20250929',
-    messages: [
-      {
-        role: 'system',
-        content: 'You are a expert financial analyst specializing in tech stocks. Provide detailed, data-driven analysis.'
-      },
-      {
-        role: 'user',
-        content: 'Should I invest in AI companies?'
-      }
-    ]
-  })
-});
-```
-
-</CodeGroup>
-
-### System Prompt Examples
-
-<AccordionGroup>
-  <Accordion title="Technical Expert">
-    ```json
-    {
-      "role": "system",
-      "content": "You are a senior software engineer with 15 years of experience. Provide detailed technical explanations with code examples. Focus on best practices, performance, and maintainability."
-    }
-    ```
-  </Accordion>
-  
-  <Accordion title="Creative Writer">
-    ```json
-    {
-      "role": "system",
-      "content": "You are a bestselling fiction author. Write engaging, descriptive prose with vivid imagery. Use literary techniques like metaphors, foreshadowing, and character development."
-    }
-    ```
-  </Accordion>
-  
-  <Accordion title="Code Reviewer">
-    ```json
-    {
-      "role": "system",
-      "content": "You are a meticulous code reviewer. Analyze code for bugs, security issues, performance problems, and style violations. Provide constructive feedback with specific suggestions."
-    }
-    ```
-  </Accordion>
-  
-  <Accordion title="Customer Support">
-    ```json
-    {
-      "role": "system",
-      "content": "You are a friendly and helpful customer support representative. Be empathetic, patient, and solution-oriented. Always maintain a positive tone and provide clear, actionable steps."
-    }
-    ```
-  </Accordion>
-  
-  <Accordion title="Data Analyst">
-    ```json
-    {
-      "role": "system",
-      "content": "You are a data analyst expert in statistics and visualization. Provide insights with numbers, trends, and data-driven recommendations. Explain complex concepts clearly."
-    }
-    ```
-  </Accordion>
-</AccordionGroup>
-
-### Multi-Turn Conversations
-
-Maintain context across multiple messages:
-
-```python
-messages = [
-    {"role": "system", "content": "You are a helpful coding assistant."},
-    {"role": "user", "content": "Write a Python function to calculate fibonacci"},
-    {"role": "assistant", "content": "def fibonacci(n):\n    if n <= 1:\n        return n\n    return fibonacci(n-1) + fibonacci(n-2)"},
-    {"role": "user", "content": "Now optimize it with memoization"}
-]
-
-response = requests.post(url, headers=headers, json={
-    "model": "gpt-5",
-    "messages": messages
-})
-```
-
-<Tip>
-System prompts are processed first and set the behavior for the entire conversation. They're ideal for defining roles, constraints, and output formats.
-</Tip>
 
 ---
 
@@ -441,57 +232,6 @@ const data = {
 # Setting max_tokens=200 reduces costs by 80%
 ```
 
----
-
-## Advanced Parameters
-
-### Top P (Nucleus Sampling)
-
-Alternative to temperature for controlling randomness:
-
-```json
-{
-  "model": "gemini-2.5-flash",
-  "messages": [...],
-  "top_p": 0.9
-}
-```
-
-- `top_p: 1.0` - Consider all tokens (default)
-- `top_p: 0.9` - Consider top 90% probability mass
-- `top_p: 0.1` - Only most likely tokens
-
-### Presence Penalty
-
-Encourage topic diversity:
-
-```json
-{
-  "model": "gpt-5",
-  "messages": [...],
-  "presence_penalty": 0.6
-}
-```
-
-- Range: `-2.0` to `2.0`
-- Positive values encourage new topics
-- Negative values encourage repetition
-
-### Frequency Penalty
-
-Reduce repetition:
-
-```json
-{
-  "model": "gpt-5",
-  "messages": [...],
-  "frequency_penalty": 0.5
-}
-```
-
-- Range: `-2.0` to `2.0`
-- Positive values reduce word repetition
-- Higher values = more diverse vocabulary
 
 ---
 
@@ -523,12 +263,7 @@ def chat_completion(
     }
     
     # Build messages with history
-    messages = [
-        {
-            "role": "system",
-            "content": "You are a helpful assistant. Be concise and accurate."
-        }
-    ]
+    messages = []
     
     if conversation_history:
         messages.extend(conversation_history)
@@ -543,10 +278,7 @@ def chat_completion(
         "model": model,
         "messages": messages,
         "stream": streaming,
-        "temperature": temperature,
-        "max_tokens": max_tokens,
-        "presence_penalty": 0.1,
-        "frequency_penalty": 0.1
+        "max_tokens": max_tokens
     }
     
     response = requests.post(url, headers=headers, json=data, stream=streaming)
@@ -582,8 +314,7 @@ response1 = chat_completion(
     api_key="sk-ctgt-YOUR_API_KEY",
     user_message="What is machine learning?",
     conversation_history=conversation,
-    streaming=True,
-    temperature=0.7
+    streaming=True
 )
 
 conversation.append({"role": "user", "content": "What is machine learning?"})
@@ -593,8 +324,7 @@ response2 = chat_completion(
     api_key="sk-ctgt-YOUR_API_KEY",
     user_message="Give me a code example",
     conversation_history=conversation,
-    streaming=True,
-    temperature=0.3  # Lower for code
+    streaming=True
 )
 ```
 
@@ -603,28 +333,28 @@ response2 = chat_completion(
 ## Best Practices
 
 <CardGroup cols={2}>
-  <Card title="Optimize Temperature" icon="temperature-half">
-    - Use 0.0-0.3 for factual tasks
-    - Use 0.7-1.0 for general content
-    - Use 1.5+ for creative writing
-  </Card>
-  
   <Card title="Set Token Limits" icon="ruler">
     - Prevent excessive costs
     - Control response length
     - Match your UI constraints
   </Card>
   
-  <Card title="Use System Prompts" icon="message-code">
-    - Define clear roles
-    - Set output formats
-    - Establish constraints
-  </Card>
-  
   <Card title="Enable Streaming" icon="water">
     - Better user experience
     - Show progress in real-time
     - Ideal for chat interfaces
+  </Card>
+  
+  <Card title="Monitor Usage" icon="chart-line">
+    - Track token consumption
+    - Set budget alerts
+    - Optimize costs regularly
+  </Card>
+  
+  <Card title="Handle Errors" icon="shield-check">
+    - Implement retry logic
+    - Use exponential backoff
+    - Log all failures
   </Card>
 </CardGroup>
 
@@ -640,8 +370,7 @@ def safe_api_call(api_key, messages, max_retries=3):
                 json={
                     "model": "gemini-2.5-flash",
                     "messages": messages,
-                    "max_tokens": 500,
-                    "temperature": 0.7
+                    "max_tokens": 500
                 },
                 timeout=30
             )
