Remove all monthly subscription cost references - now pay-as-you-go only

--- a/api-reference/models-pricing.mdx
+++ b/api-reference/models-pricing.mdx
@@ -239,7 +239,7 @@ curl https://api.ctgt.ai/v1/subscription/info \
   - Priority support
   - Production-ready infrastructure
   
-  **Starting at $10/month** + pay-as-you-go usage
+  **Pay-as-you-go usage only** - no monthly fees
 </Card>
 
 ---
