--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -21,112 +21,7 @@ Get started with the CTGT API in 3 simple steps:
 2. **Get your API key**
 3. **Make your first request**
 
----
-
-## Step 1: Create Your Account
-
-Create your account with email verification:
-
-<CodeGroup>
-
-```bash cURL
-curl -X POST https://api.ctgt.ai/v1/auth/signup \
-  -H "Content-Type: application/json" \
-  -d '{
-    "name": "John Doe",
-    "email": "john@example.com",
-    "organization": "Acme Corp"
-  }'
-```
-
-```python Python
-import requests
-
-url = "https://api.ctgt.ai/v1/auth/signup"
-payload = {
-    "name": "John Doe",
-    "email": "john@example.com",
-    "organization": "Acme Corp"
-}
-
-response = requests.post(url, json=payload)
-print(response.json())
-```
-
-```javascript JavaScript
-const response = await fetch('https://api.ctgt.ai/v1/auth/signup', {
-  method: 'POST',
-  headers: {
-    'Content-Type': 'application/json',
-  },
-  body: JSON.stringify({
-    name: 'John Doe',
-    email: 'john@example.com',
-    organization: 'Acme Corp'
-  })
-});
-
-const data = await response.json();
-console.log(data);
-```
-
-</CodeGroup>
-
-**Response:**
-```json
-{
-  "message": "Account created successfully. Please check your email to verify your account.",
-  "email": "john@example.com"
-}
-```
-
----
-
-## Step 2: Verify Your Email
-
-Check your inbox for a verification email containing a link like:
-
-```
-https://api.ctgt.ai/v1/auth/verify?token=VERIFICATION_TOKEN
-```
-
-Click the link or make a GET request:
-
-<CodeGroup>
-
-```bash cURL
-curl "https://api.ctgt.ai/v1/auth/verify?token=VERIFICATION_TOKEN"
-```
-
-```python Python
-import requests
-
-token = "VERIFICATION_TOKEN"
-url = f"https://api.ctgt.ai/v1/auth/verify?token={token}"
-
-response = requests.get(url)
-data = response.json()
-print(f"API Key: {data['api_key']}")
-```
-
-</CodeGroup>
-
-**Response:**
-```json
-{
-  "message": "Email verified successfully!",
-  "email": "john@example.com",
-  "api_key": "sk-ctgt-abc123def456..."
-}
-```
-
-<Warning>
-**Save your API key!** You'll need it for all API requests. Store it securely and never share it publicly.
-</Warning>
-
----
-
-## Step 3: Make Your First Request
+## Make Your First Request
 
 Now you can start making API requests using your API key:
 
